# gb-emulator

./: .gitignore  Cargo.toml  README.md  flake.nix
roms/: print-metadata.sh
src/: emulator.rs  main.rs  tui.rs
src/cpu/: boot.rs  core.rs  dma.rs  instructions.rs  interrupts.rs  memory.rs  mod.rs  opcodes.rs  registers.rs  serial.rs  timers.rs
src/cpu/instructions/: core.rs  mod.rs  prefixed.rs
src/graphics/: core.rs  fifo.rs  memory.rs  mod.rs  oam.rs  object.rs  pixel_fetcher.rs  ppu.rs  window.rs
src/memory/: bus.rs  io.rs  mem.rs  memory.rs  mod.rs
src/tui/: emulator_state.rs  logging.rs  mod.rs
tests/common/: mod.rs
