[package]
name = "gb-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6"
crossbeam-channel = "0.5.14"
crossterm = "0.29.0"
error-iter = "0.4.1"
log = "0.4.22"
pixels = "0.14.0"
ratatui = "0.29.0"
winit = { version = "0.30.5", features = ["rwh_05"] }
winit_input_helper = "0.16.0"

[dev-dependencies]
ureq = "3.0.11"
zip = "2.6.1"
